<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recurring_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/r_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:layout_marginVertical="@dimen/dp_8"
        android:gravity="center"
        android:text="@string/recurring_title"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/r_chipgroup_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/r_interval"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:autofillHints="@string/r_interval_daily"
        android:digits="0123456789"
        android:fontFamily="sans-serif"
...
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/r_divider_upper"
        app:layout_constraintStart_toStartOf="@+id/r_title"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_daily"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Daily" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chip_weekly"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Weekly" />
    </com.google.android.material.chip.ChipGroup>

    <View
        android:id="@+id/r_divider_upper"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/dp_6"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/r_chipgroup_days"
        app:layout_constraintEnd_toEndOf="@+id/r_title"
        app:layout_constraintStart_toStartOf="@+id/r_title" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/r_chipgroup_days"
        android:layout_width="0dp"
...
            android:layout_height="wrap_content"
            android:checkable="true"
            android:tag="@string/MONDAY"
            android:text="@string/monday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_tuesday"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:tag="@string/TUESDAY"
            android:text="@string/tuesday" />
...
            android:layout_height="wrap_content"
            android:checkable="true"
            android:tag="@string/WEDNESDAY"
            android:text="@string/wednesday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_thursday"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:tag="@string/THURSDAY"
            android:text="@string/thursday" />
...
    <View
        android:id="@+id/r_divider_lower"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/dp_6"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/r_cancel_button"
        app:layout_constraintEnd_toEndOf="@+id/r_title"
        app:layout_constraintStart_toStartOf="@+id/r_title" />

    <Button
        android:id="@+id/r_cancel_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_weight="1"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/r_confirm_button" />

    <Button
        android:id="@+id/r_confirm_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
