...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/todo_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/todo_item_finished_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:id="@+id/name_text"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/todo_item_finished_checkbox"
            app:layout_constraintTop_toTopOf="parent" />

...
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_8"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/time_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/date_btn"
                app:srcCompat="@drawable/ic_access_time_24dp" />

            <ImageButton
                android:id="@+id/notes_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                app:layout_constraintBottom_toTopOf="@+id/time_btn"
                app:layout_constraintEnd_toStartOf="@+id/reschedule_btn"
                app:layout_constraintStart_toStartOf="@+id/notes_btn"
                app:layout_constraintTop_toBottomOf="@+id/date_text" />

            <ImageView
                android:id="@+id/is_recurring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/date_text"
                app:layout_constraintStart_toEndOf="@+id/date_text"
                app:layout_constraintTop_toTopOf="@+id/date_text"
                app:srcCompat="@drawable/ic_repeat_24"
...
